added ugc header and started about blurb

--- a/about.html
+++ b/about.html
@@ -31,22 +31,37 @@
         this does require a slight bit of JS.-->
         <li>
           <a href="index.html">
-            <label for="menuCheckbox" onclick="this.parentNode.click();">Home</label>
+            <label for="menuCheckbox" onclick="this.parentNode.click();">home</label>
           </a>
         </li>
         <li>
           <a href="about.html">
-            <label for="menuCheckbox" onclick="this.parentNode.click();">About</label>
+            <label for="menuCheckbox" onclick="this.parentNode.click();">about</label>
           </a>
         </li>
-      
-        <!-- These just close the menu -->
-        <li><label for="menuCheckbox"><a>Info</a></label></li>
-        <li><label for="menuCheckbox"><a>Contact</a></label></li>
-      
-        <!-- Or just use regular URLs -->
+
         <li>
-            <a href="https://erikterwan.com/" target="_blank">Show me more</a>
+          <a href="about.html">
+            <label for="menuCheckbox" onclick="this.parentNode.click();">gallery</label>
+          </a>
+        </li>
+
+        <li>
+          <a href="about.html">
+            <label for="menuCheckbox" onclick="this.parentNode.click();">projects</label>
+          </a>
+        </li>
+
+        <li>
+          <a href="ugc.html">
+            <label for="menuCheckbox" onclick="this.parentNode.click();">ugc</label>
+          </a>
+        </li>
+
+        <li>
+          <a href="about.html">
+            <label for="menuCheckbox" onclick="this.parentNode.click();">contact</label>
+          </a>
         </li>
       </ul>
   </div> <!-- hamburger menu end-->
