cleaning up index and making it better to view on the mobile devices. issue that within a certain px size all css is lost not sure why yet

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" media="screen and (min-width: 900px)" href="widescreen.css">
+  <link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -74,12 +75,17 @@
       </ul>
   </div> <!-- hamburger menu end-->
 
-  <div class="mascot">
+  <div class="index_container">
     <image class="mascot_image" src="assets/header_mascot.png"></image>
-  </div>
-  <div class="logo">
     <image class="logo_image" src="assets/logo_image.png"></image>
   </div>
+   
+  <!-- <div class="mascot">
+        <image class="mascot_image" src="assets/header_mascot.png"></image>
+  </div> -->
+  <!-- <div class="logo">
+    <image class="logo_image" src="assets/logo_image.png"></image>
+  </div> -->
 
 
     <!-- <section id="hero">
