--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" media="screen and (min-width: 600px)" href="widescreen.css">
+  <link rel="stylesheet" media="screen and (min-width: 768px)" href="smallscreen.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
