--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" media="screen and (min-width: 600px)" href="widescreen.css">
-  <link rel="stylesheet" media="screen and (min-width: 768px)" href="smallscreen.css">
+  <link rel="stylesheet" media="screen and (min-width: 900px)" href="widescreen.css">
+  <link rel="stylesheet" media="screen and (max-width: 900px)" href="smallscreen.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -67,15 +67,16 @@
       </ul>
   </div> <!-- hamburger menu end-->
 
-  <div class="mascot">
+  
+  <div class="index_container">
     <image class="mascot_image" src="assets/header_mascot.png"></image>
-  </div>
-  <div class="about_blurb">
+    <div class="about_blurb">
     <p class="blurb_script">halia was born and raised in Southern California before studying computer science and visual communication design at San Francisco State University. She is currently pursuing her love
         of coffee working as an assistant manager at Blue Hummingbird Coffee. She has a passion for using creastivity to develop solutions. 
-    
     when she's not working, halia enjoys trail running, ultra marathons, almond croissants, and adding to her CD collection. </p>
   </div>
+  </div>
+  
 
 
     <!-- <section id="hero">
